Implemented Data Access Layer
- Added repsoitory classes and interfaces.
- Added domain models.
- Added UnitOfWork class and interface

--- a/Laboration03.Infrastructure/Laboration03.Infrastructure.csproj
+++ b/Laboration03.Infrastructure/Laboration03.Infrastructure.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Laboration03.Application\Laboration03.Application.csproj" />
+    <ProjectReference Include="..\Laboration03.Domain\Laboration03.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
