--- a/Laboration03.Application/Laboration03.Application.csproj
+++ b/Laboration03.Application/Laboration03.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Laboration03.Domain\Laboration03.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
