--- a/Laboration03/Laboration03.csproj
+++ b/Laboration03/Laboration03.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Laboration03.Infrastructure\Laboration03.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
