--- a/Laboration03/appsettings.json
+++ b/Laboration03/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-7V9MB23S\\SQLEXPRESS;Database=Laboration03;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-JT0GK5I;Database=Laboration03;Trusted_Connection=True;"
   }
 }
